P0 implemented: JDK 28 + Valhalla value classes + Panama, 409 checks green
The six vocabulary types (LaneId, MaskId, Ordinal, FacetId, RowRange,
WideFieldMask) are now public value record; bench/run.sh pins jdk-28+16 and
carries --release 28 --enable-preview. Measured on Temurin 28+16-ea: the full
gate suite is 409 checks / 0 failures both unflipped and flipped, all six
types report isValue() == true at runtime, and FFM stays final and flag-free.

Also fixes a cross-repo break that blocked the build entirely: lance-graph's
mask_risc::ExecError gained RangeOutOfBounds with the Pred::Range work and
exec_error_to_status maps it exhaustively, so lgj-abi did not compile against
lance-graph main. The new variant joins the documented bug-in-this-file family
and the doc enumeration is extended with it. Native suite: 187 tests green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HScwwezRdMxFfTs3WLG19d